tests/tests/ui/deferred_in_enum_variant.stderr
error: cannot find attribute `deferred` in this scope
 --> tests/ui/deferred_in_enum_variant.rs:7:11
  |
7 |         #[deferred]
  |           ^^^^^^^^
